Time                                Comments 
Tuesday, March 25, 2016 4:30PM      Created a Welcome controller and a timetable view
Tuesday, March 24, 2016 4:30PM      Created the Timetable model
Tuesday, March 8, 2016  8:22PM	    Added comments to the dtd file
Tuesday, March 8, 2016  8:22PM	    Added constraint to the slot attribute of the time element
Tuesday, March 8, 2016  8:03PM	    Added completed timetable.dtd file
Tuesday, March 8, 2016  8:03PM	    Added completed timetable.xml file
Tuesday, March 8, 2016  8:03PM	    Renamed timeslots.xml to times.xml
Tuesday, March 8, 2016  4:48PM      Added days xml file
Tuesday, March 8, 2016  4:45PM      Added timeslots xml file
Tuesday, March 8, 2016  4:41PM      Added courses xml file