@@ -1,19 +1,0 @@
-<div>
-  <div class="logo">
-    <a href="/">COMP4711</a>
-  </div>
-  <ul id="navigation">
-    <li class="active">
-      <a href="/">Home</a>
-    </li>
-    <li>
-      <a href="/history">History</a>
-    </li>
-    <li>
-      <a href="/portfolio">Portfolio</a>
-    </li>
-    <li>
-      <a href="/login">Log In</a>
-    </li>
-  </ul>
-</div>
