@@ -1,49 +1,17 @@
 <!DOCTYPE HTML>
-<!-- Website template by freewebsitetemplates.com -->
 <head>
 	<meta charset="UTF-8">
 	<title>Stock Ticker</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<!--<link rel="stylesheet" href="/Assets/css/style.css" type="text/css">
-	<link rel="stylesheet" href="/Assets/css/custom.css" type="text/css">-->
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
 </head>
 <body>
 	<div class="container">
-		<div id="header">
-		<div>
-  <div class="logo">
-    <a href="/">COMP4711</a>
-  </div>
-  <ul id="navigation">
-    <li class="active">
-      <a href="/">Home</a>
-    </li>
-    <li>
-      <a href="/history">History</a>
-    </li>
-    <li>
-      <a href="/portfolio">Portfolio</a>
-    </li>
-    <li>
-      <a href="/login">Log In</a>
-    </li>
-  </ul>
-</div>
-		</div>
 		<div id="body">
 			{content}
 		</div>
-		<div id="footer">
-			<div class="clearfix">
-				<div id="connect">
-					<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
-				</div>
-				<p>
-					© 2023 Zerotype. All Rights Reserved.
-				</p>
-			</div>
-		</div>
-		<!--<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<script src="/assets/js/script.js" type="text/javascript"></script>
 	</div>
 </body>
